Added SongTable component

--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -39,18 +39,12 @@
                     <div data-bind="if: $root.modalDiscs().length > 1">
                         <div data-bind="foreach: $root.modalDiscs()">
                             <h4 data-bind="text: $data"></h4>
-                            <table class='song-table'>
-                                <tbody data-bind="foreach: _.filter($parent.songs(), function (song) { return song.disc_number === $index() + 1; })">
-                                    {% include "rhyme/partials/song_row.html" %}
-                                </tbody>
-                            </table>
+                            <div data-bind="reactSongTable: {
+                                songs: _.filter($parent.songs(), function (song) { return song.disc_number === $index() + 1; })
+                            }"></div>
                         </div>
                     </div>
-                    <table data-bind="ifnot: $root.modalDiscs().length > 1" class='song-table'>
-                        <tbody data-bind="foreach: songs">
-                            {% include "rhyme/partials/song_row.html" %}
-                        </tbody>
-                    </table>
+                    <div data-bind="visible: $root.modalDiscs().length === 1, reactSongTable: { songs: songs() }"></div>
                 </div>
             </div>
         </div>
