--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -13,22 +13,11 @@
     </div>
 
     <div class="item-page" data-url="{% url "song_list" %}">
-        <table class="song-table table table-striped table-condensed table-hover infinite-scroll-container">
-            <thead>
-                <th>&nbsp;</th>
-                <th>Name</th>
-                <th>Artist</th>
-                <th>Albums</th>
-                <th>Year</th>
-                <th>Rating</th>
-                <th>Energy</th>
-                <th>Mood</th>
-                <th>Tags</th>
-            </thead>
-            <tbody data-bind="foreach: items">
-                {% include "rhyme/partials/song_row.html" %}
-            </tbody>
-        </table>
+        <div data-bind="reactSongTable: {
+            songs: items(),
+            extraClasses: 'infinite-scroll-container',
+            showHeader: true,
+        }"></div>
         <p class='loading text-center' data-bind='visible: isLoading'>
             <i class='fas fa-spinner fa-spin'></i>
             Loading...
