--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -35,3 +35,7 @@
         </p>
     </div>
 {% endblock content %}
+
+{% block modals %}
+    {% include "rhyme/partials/modal_album.html" %}
+{% endblock %}
