--- a/rhyme/static/rhyme/style/songs.less
+++ b/rhyme/static/rhyme/style/songs.less
@@ -6,6 +6,10 @@
             border: none;
             vertical-align: middle;
 
+            a {
+                color: @defaultFontColor;
+            }
+
             &:not(:first-child) {
                 border-bottom: 1px solid @greyLightest;
             }
