--- a/rhyme/templates/rhyme/partials/modal_filter_base.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_base.html
@@ -1,9 +1,6 @@
-<a class="btn btn-default" data-toggle="modal" data-target="#filter-modal-{{ name|slugify }}">
-    <i class="fas fa-{{ icon|default:"plus" }}"></i>
-    {% if not condensed %}
-        {{ name }}
-    {% endif %}
-</a>
+{% if not last %}
+    {% include "rhyme/partials/modal_filter_base_button.html" with name=name icon=icon condensed=condensed %}
+{% endif %}
 
 <div class="modal filter-modal" id="filter-modal-{{ name|slugify }}" tabindex="-1" role="dialog" aria-hidden="true" data-lhs="{{ lhs }}" data-bind="event: {'shown.bs.modal': focusFilter }">
     <div class="modal-dialog" role="document">
@@ -36,3 +33,7 @@
         </div>
     </div>
 </div>
+
+{% if last %}
+    {% include "rhyme/partials/modal_filter_base_button.html" with name=name icon=icon condensed=condensed %}
+{% endif %}
