Added network page

--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -45,6 +45,12 @@
                     </a>
                 </li>
                 <li>
+                    <a href='{% url "network" %}'>
+                        <i class="fas fa-globe-asia"></i>
+                        Network
+                    </a>
+                </li>
+                <li>
                     <a href='{% url "playlist" %}'>
                         <i class="fas fa-list"></i>
                         Playlist
