--- a/rhyme/templates/rhyme/stats.html
+++ b/rhyme/templates/rhyme/stats.html
@@ -12,6 +12,8 @@
 
 {% block content %}
 
+{% include "rhyme/partials/all_filters.html" %}
+
 <div class="well pull-right" id="network-controls">
     <select class="select2" name="category">
         <option value="">(All Categories)</option>
