--- a/rhyme/templates/rhyme/stats.html
+++ b/rhyme/templates/rhyme/stats.html
@@ -30,6 +30,10 @@
     </button>
 </div>
 
+<p class='loading text-center' data-bind='visible: isLoading'>
+    <i class='fas fa-spinner fa-spin'></i>
+    Loading...
+</p>
 <div class="chart-container">
     <svg class="{{ css_class }}" width="800" height="600"></svg>
 </div>
