Extracting loading.html template

--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -15,10 +15,7 @@
         <div class="albums clearfix infinite-scroll-container" data-bind="foreach: items">
             {% include "rhyme/partials/album.html" %}
         </div>
-        <p class='loading text-center' data-bind='visible: isLoading'>
-            <i class='fas fa-spinner fa-spin'></i>
-            Loading...
-        </p>
+        {% include "rhyme/partials/loading.html" %}
     </div>
 {% endblock content %}
 
