--- a/rhyme/templates/rhyme/stats.html
+++ b/rhyme/templates/rhyme/stats.html
@@ -24,7 +24,7 @@
     <br /><br />
     <input class="form-control" type="text" name="strength" value="{{ strength }}" />
     <br />
-    <button class="btn btn-primary">
+    <button class="btn btn-primary" data-bind="click: refresh">
         <i class="fab fa-pagelines"></i>
         Generate
     </button>
