Added buttons to view and clear selection

--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -28,7 +28,9 @@
             <a class='navbar-brand' href='#'>Rhyme</a>
             {% if has_export %}
                 <div class="controls">
-                    {% include "rhyme/partials/export_action.html" %}
+                    {% block controls %}
+                        {% include "rhyme/partials/export_action.html" %}
+                    {% endblock controls %}
                 </div>
             {% endif %}
             <ul class="nav navbar-nav">
