--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -32,6 +32,6 @@
     {% include "rhyme/partials/loading.html" %}
 {% endblock content %}
 
-{% block modals %}
+{% block modals %}{{ block.super }}
     {% include "rhyme/partials/modal_song_list.html" %}
 {% endblock %}
