--- a/rhyme/templates/rhyme/stats.html
+++ b/rhyme/templates/rhyme/stats.html
@@ -5,10 +5,24 @@
 {% block title %}{{ block.super }}: {{ title }}{% endblock title %}
 
 {% block js %}{{ block.super }}
-    <script src="{% static "d3/dist/d3.js" %}"></script>
+    <script src="{% static "d3/dist/d3.min.js" %}"></script>
     <script src="{% static "rhyme/js/stats_utils.js" %}"></script>
     <script src="{% static "rhyme/js/network.js" %}"></script>
 {% endblock js %}
+
+{% block controls %}
+    <span class="selection-buttons hide">
+        <button class="btn btn-info btn-xs" data-bind="click: viewSelection">
+            <i class="fas fa-eye"></i>
+            View Songs
+        </button>
+        <button class="btn btn-info btn-xs" data-bind="click: clearSelection">
+            <i class="fas fa-times"></i>
+            Clear Selection
+        </button>
+    </span>
+    {{ block.super }}
+{% endblock controls %}
 
 {% block content %}
 
@@ -38,3 +52,7 @@
 <div id="tooltip" class="hide"></div>
 
 {% endblock content %}
+
+{% block modals %}{{ block.super }}
+    {% include "rhyme/partials/modal_song_list.html" %}
+{% endblock %}
