Moved hide modal handling into rhymeModel

--- a/rhyme/templates/rhyme/partials/modal_song_list.html
+++ b/rhyme/templates/rhyme/partials/modal_song_list.html
@@ -1,4 +1,4 @@
-<div id="song-list" class="modal">
+<div id="song-list" class="modal" data-bind="event: {hide: hideModal, 'hide.bs.modal': hideModal}">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
