--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -53,6 +53,12 @@
                     </a>
                 </li>
                 <li>
+                    <a href='{% url "matrix" %}'>
+                        <i class="fas fa-table"></i>
+                        Matrix
+                    </a>
+                </li>
+                <li>
                     <a href='{% url "playlist" %}'>
                         <i class="fas fa-list"></i>
                         Playlist
