--- a/rhyme/templates/rhyme/stats.html
+++ b/rhyme/templates/rhyme/stats.html
@@ -6,6 +6,7 @@
 
 {% block js %}{{ block.super }}
     <script src="{% static "d3/dist/d3.min.js" %}"></script>
+    <script src="{% static "rhyme/js/stats.js" %}"></script>
 {% endblock js %}
 
 {% block controls %}
