Added axis labels

--- a/rhyme/static/rhyme/style/rhyme.less
+++ b/rhyme/static/rhyme/style/rhyme.less
@@ -1,6 +1,7 @@
 @import "albums.less";
 @import "base.less";
 @import "defaults.less";
+@import "matrix.less";
 @import "songs.less";
 @import "stats.less";
 @import "structure.less";
