--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -29,7 +29,7 @@
             {% if has_export %}
                 <div class="controls">
                     {% block controls %}
-                        {% include "rhyme/partials/export_action.html" %}
+                        {% include "rhyme/partials/export_action.html" with params="{}" %}
                     {% endblock controls %}
                 </div>
             {% endif %}
