--- a/rhyme/templates/rhyme/partials/modal_song_list.html
+++ b/rhyme/templates/rhyme/partials/modal_song_list.html
@@ -4,7 +4,7 @@
             <div class="modal-header">
                 <h4>
                     <div class="pull-right">
-                        {% include "rhyme/partials/export_action.html" %}
+                        {% include "rhyme/partials/export_action.html" with params="songListParams()" %}
                     </div>
                     <span class="modal-title" data-bind="text: modalName"></span>
                 </h4>
