Moved filters to left

--- a/rhyme/static/rhyme/style/structure.less
+++ b/rhyme/static/rhyme/style/structure.less
@@ -57,7 +57,8 @@ body > .loading {
         }
     }
 
-    .item-page {
+    // TODO: fix: infinite scroll no longer works
+    .xitem-page {
         position: fixed;
         top: @navHeight + @filterContainerHeight;
         bottom: @spacingWide;
