--- a/rhyme/templates/rhyme/stats.html
+++ b/rhyme/templates/rhyme/stats.html
@@ -24,15 +24,18 @@
 {% endblock controls %}
 
 {% block content %}
+    <div class="row">
+        <div class="col-sm-2 text-center">
+            {% include "rhyme/partials/all_filters.html" %}
+        </div>
+        <div class="col-sm-10 text-center">
+            {% include "rhyme/partials/loading.html" %}
 
-{% include "rhyme/partials/all_filters.html" %}
+            {% block visualization %}{% endblock %}
 
-{% include "rhyme/partials/loading.html" %}
-
-{% block visualization %}{% endblock %}
-
-<div id="tooltip" class="hide"></div>
-
+            <div id="tooltip" class="hide"></div>
+        </div>
+    </div>
 {% endblock content %}
 
 {% block modals %}{{ block.super }}
