--- a/rhyme/templates/rhyme/partials/all_filters.html
+++ b/rhyme/templates/rhyme/partials/all_filters.html
@@ -2,7 +2,7 @@
     <div class="col-sm-12 text-center">
         {% include "rhyme/partials/infinite_scroll_item_count.html" %}
         {% include "rhyme/partials/omni_filter.html" %}
-        {% include "rhyme/partials/filters.html" with condensed=True %}
+        {% include "rhyme/partials/filters.html" %}
         {% include "rhyme/partials/read_only_filters.html" %}
     </div>
 </div>
