--- a/rhyme/templates/rhyme/partials/filters.html
+++ b/rhyme/templates/rhyme/partials/filters.html
@@ -1,29 +1,29 @@
 {# Song filters #}
-{% include 'rhyme/partials/modal_filter_bool.html' with model='song' name='Starred' icon='star-half-alt' lhs='starred' condensed=condensed disallow_null=True %}
+{% include 'rhyme/partials/modal_filter_bool.html' with model='song' name='Starred' icon='star-half-alt' lhs='starred' disallow_null=True %}
 
 <div class="btn-group">
-    {% include 'rhyme/partials/modal_filter_select.html' with model='song' name='Artist' icon='microphone' lhs='artist' url='artist_select2' condensed=condensed disallow_null=True %}
-    {% include 'rhyme/partials/modal_filter_select.html' with model='song' name='Genre' icon='folder' lhs='genre' options=RHYME_GENRES condensed=condensed last=True %}
+    {% include 'rhyme/partials/modal_filter_select.html' with model='song' name='Artist' icon='microphone' lhs='artist' url='artist_select2' disallow_null=True %}
+    {% include 'rhyme/partials/modal_filter_select.html' with model='song' name='Genre' icon='folder' lhs='genre' options=RHYME_GENRES last=True %}
 </div>
 
 <div class="btn-group">
-    {% include 'rhyme/partials/modal_filter_numeric.html' with model='song' name='Release Year' icon='calendar' lhs='year' condensed=condensed %}
-    {% include 'rhyme/partials/modal_filter_time.html' with model='song' name='Song Length' icon='clock' lhs='time' condensed=condensed last=True %}
+    {% include 'rhyme/partials/modal_filter_numeric.html' with model='song' name='Release Year' icon='calendar' lhs='year' %}
+    {% include 'rhyme/partials/modal_filter_time.html' with model='song' name='Song Length' icon='clock' lhs='time' last=True %}
 </div>
 
 <div class="btn-group">
-    {% include 'rhyme/partials/modal_filter_rating.html' with model='song' name='Rating' lhs='rating' icon='star' condensed=condensed %}
-    {% include 'rhyme/partials/modal_filter_rating.html' with model='song' name='Energy' lhs='energy' icon='fire' condensed=condensed %}
-    {% include 'rhyme/partials/modal_filter_rating.html' with model='song' name='Mood'  lhs='mood' icon='heart' condensed=condensed last=True %}
+    {% include 'rhyme/partials/modal_filter_rating.html' with model='song' name='Rating' lhs='rating' icon='star' %}
+    {% include 'rhyme/partials/modal_filter_rating.html' with model='song' name='Energy' lhs='energy' icon='fire' %}
+    {% include 'rhyme/partials/modal_filter_rating.html' with model='song' name='Mood'  lhs='mood' icon='heart' last=True %}
 </div>
 
 <div class="btn-group">
-    {% include 'rhyme/partials/modal_filter_select.html' with model='song' name='Tag' icon='tags' lhs='tag' url='tag_select2' include_all=True condensed=condensed disallow_null=True %}
-    {% include 'rhyme/partials/modal_filter_numeric.html' with model='song' name='Tag Year' icon='history' lhs='tag_year' condensed=condensed disallow_null=True %}
-    {% include 'rhyme/partials/modal_filter_numeric.html' with model='album' name='Year Acquired' icon='shopping-cart' lhs='acquired_year' condensed=condensed disallow_null=True last=True %}
+    {% include 'rhyme/partials/modal_filter_select.html' with model='song' name='Tag' icon='tags' lhs='tag' url='tag_select2' include_all=True disallow_null=True %}
+    {% include 'rhyme/partials/modal_filter_numeric.html' with model='song' name='Tag Year' icon='history' lhs='tag_year' disallow_null=True %}
+    {% include 'rhyme/partials/modal_filter_numeric.html' with model='album' name='Year Acquired' icon='shopping-cart' lhs='acquired_year' disallow_null=True last=True %}
 </div>
 
-{% include 'rhyme/partials/modal_filter_select.html' with model='song' name='Playlist' icon='list' lhs='playlist' url='playlist_select2' include_all=True condensed=condensed disallow_null=True %}
+{% include 'rhyme/partials/modal_filter_select.html' with model='song' name='Playlist' icon='list' lhs='playlist' url='playlist_select2' include_all=True disallow_null=True %}
 
 <div class="btn-group" role="group">
     {% include "rhyme/partials/modal_filter_text.html" with model='album' name='Album Name' icon='compact-disc' lhs='name' disallow_null=True %}
