Removed transitional playlist creation page

--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -58,17 +58,12 @@
                         Matrix
                     </a>
                 </li>
-                <li>
-                    <a href='{% url "playlist" %}'>
-                        <i class="fas fa-list"></i>
-                        Playlist
-                    </a>
-                </li>
             </ul>
         </nav>
     </div>
 
     <div class="post-nav">
+        {# TODO: bring column structure in here #}
         {% block content %}{% endblock %}
     </div>
 
