--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -8,40 +8,35 @@
     <script src="{% static "rhyme/js/infinite_scroll_page.js" %}"></script>
 {% endblock js %}
 
-{% block content %}
-    <div class="row">
-        <div class="col-sm-2 text-center">
-            <div class="btn-group" role="group" style="width: 200px;">
-                <select class="form-control select2" data-bind="value: activePlaylistId" id="active-playlist">
-                    <option></option>
-                    {% for playlist in playlists %}
-                        <option value="{{ playlist.id }}">{{ playlist.name }}</option>
-                    {% endfor %}
-                </select>
-            </div>
+{% block filters %}
+    <div class="btn-group" role="group" style="width: 200px;">
+        <select class="form-control select2" data-bind="value: activePlaylistId" id="active-playlist">
+            <option></option>
+            {% for playlist in playlists %}
+                <option value="{{ playlist.id }}">{{ playlist.name }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    {{ block.super }}
+{% endblock filters %}
 
-            {% include "rhyme/partials/all_filters.html" %}
-        </div>
-        <div class="col-sm-10 text-center">
-            <div class="item-page" data-url="{% url "song_list" %}">
-                <table class="song-table table table-striped table-condensed table-hover infinite-scroll-container">
-                    <thead>
-                        <th>&nbsp;</th>
-                        <th>Name</th>
-                        <th>Artist</th>
-                        <th>Albums</th>
-                        <th>Rating</th>
-                        <th>Energy</th>
-                        <th>Mood</th>
-                        <th>Tags</th>
-                    </thead>
-                    <tbody data-bind="foreach: items">
-                        {% include "rhyme/partials/song_row.html" %}
-                    </tbody>
-                </table>
-            </div>
-            {% include "rhyme/partials/loading.html" %}
-        </div>
+{% block content %}
+    <div class="item-page" data-url="{% url "song_list" %}">
+        <table class="song-table table table-striped table-condensed table-hover infinite-scroll-container">
+            <thead>
+                <th>&nbsp;</th>
+                <th>Name</th>
+                <th>Artist</th>
+                <th>Albums</th>
+                <th>Rating</th>
+                <th>Energy</th>
+                <th>Mood</th>
+                <th>Tags</th>
+            </thead>
+            <tbody data-bind="foreach: items">
+                {% include "rhyme/partials/song_row.html" %}
+            </tbody>
+        </table>
     </div>
 {% endblock content %}
 
