--- a/rhyme/templates/rhyme/partials/modal_filter_base_button.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_base_button.html
@@ -1,4 +1,6 @@
-<a class="btn btn-default" data-toggle="modal" data-target="#filter-modal-{{ name|slugify }}">
-    <i class="fas fa-{{ icon|default:"plus" }}"></i>
-    {{ name }}
-</a>
+<div style="margin-top: 5px;"><!-- TODO: move into class -->
+    <a class="btn btn-default btn-xs" data-toggle="modal" data-target="#filter-modal-{{ name|slugify }}">
+        <i class="fas fa-{{ icon|default:"plus" }}"></i>
+        {{ name }}
+    </a>
+</div>
