--- a/rhyme/templates/rhyme/partials/modal_filter_base_button.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_base_button.html
@@ -1,6 +1,7 @@
-<div style="margin-top: 5px;"><!-- TODO: move into class -->
-    <a class="btn btn-default btn-xs" data-toggle="modal" data-target="#filter-modal-{{ name|slugify }}">
+<div class="filter-type" data-bind="with: getFilterTypeModel('{{ lhs }}')" style="margin-top: 5px;"><!-- TODO: move into class -->
+    <button class="btn btn-default btn-xs" data-toggle="modal" data-target="#filter-modal-{{ name|slugify }}">
         <i class="fas fa-{{ icon|default:"plus" }}"></i>
         {{ name }}
-    </a>
+    </button>
+    <span data-bind="text: filterText"></span>
 </div>
