--- a/rhyme/templates/rhyme/partials/modal_filter_base_button.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_base_button.html
@@ -1,7 +1,14 @@
 <div class="filter-type" data-bind="with: getFilterTypeModel('{{ lhs }}')" style="margin-top: 5px;"><!-- TODO: move into class -->
-    <button class="btn btn-default btn-xs" data-toggle="modal" data-target="#filter-modal-{{ name|slugify }}">
-        <i class="fas fa-{{ icon|default:"plus" }}"></i>
-        {{ name }}
-    </button>
-    <span data-bind="text: filterText"></span>
+    <div class="btn-group" role="group">
+        <button class="btn btn-xs btn-default" data-toggle="modal" data-target="#filter-modal-{{ name|slugify }}" data-bind="css: {'active': filterText}">
+            <i class="fas fa-{{ icon|default:"plus" }}"></i>
+            {{ name }}
+            <span data-bind="text: filterText"></span>
+        </button>
+        <!-- ko if: filterText -->
+            <button class="btn btn-xs btn-default active" data-bind="click: removeFilters">
+                <i class="far fa-times"></i>
+            </button>
+        <!-- /ko -->
+    </div>
 </div>
